homepage layout bug fix

--- a/app/assets/stylesheets/home/home.css.scss
+++ b/app/assets/stylesheets/home/home.css.scss
@@ -240,8 +240,10 @@
 
 #how-it-works{
 	height: 241px;
+	margin: 0;
 
 	.col-md-12{
+		padding: 0;
 		background: image-url('home/cover.jpg') repeat;
 	}
 
@@ -263,6 +265,7 @@
 	opacity: 0.8;
 	display: block;
 	min-height: 120px;
+	margin: 0;
 
 }
 
